--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
  "scripts": {
   "build:watch": "rm -rf public/app/* && esbuild src/index.ts --watch --bundle --resolve-extensions=.ts --outfile=public/app/main.js",
   "build": "esbuild src/index.ts --bundle --resolve-extensions=.ts --outfile=public/app/main.js",
-  "kv": "node mock-kv.mjs",
+  "kv": "node kv.mjs",
   "serve": "python -m http.server 8123 -d public",
   "start": "wrangler pages dev public --compatibility-flags='nodejs_compat' --compatibility-date='2023-12-23'"
  },
@@ -14,17 +14,17 @@
   "highlight.js": "^11.9.0"
  },
  "devDependencies": {
-  "@starryui/button": "^0.0.15",
-  "@starryui/frame": "^0.0.15",
-  "@starryui/layout": "^0.0.15",
-  "@starryui/menu": "^0.0.15",
-  "@starryui/page": "^0.0.15",
-  "@starryui/theme": "^0.0.15",
-  "@starryui/theme-brilliance": "^0.0.15",
-  "@starryui/theme-midnight": "^0.0.15",
-  "@starryui/theme-sandstone": "^0.0.15",
-  "@starryui/traits": "^0.0.15",
-  "@starryui/tray": "^0.0.15",
+  "@starryui/button": "^0.0.16",
+  "@starryui/frame": "^0.0.16",
+  "@starryui/layout": "^0.0.16",
+  "@starryui/menu": "^0.0.16",
+  "@starryui/page": "^0.0.16",
+  "@starryui/theme": "^0.0.16",
+  "@starryui/theme-brilliance": "^0.0.16",
+  "@starryui/theme-midnight": "^0.0.16",
+  "@starryui/theme-sandstone": "^0.0.16",
+  "@starryui/traits": "^0.0.16",
+  "@starryui/tray": "^0.0.16",
   "@cloudflare/workers-types": "^4.20231025.0",
   "@types/node": "^20.8.9",
   "esbuild": "^0.19.5",
